[gd_scene load_steps=2 format=3 uid="uid://yai8j2d80cps"]

[ext_resource type="Script" path="res://scripts/main_menu/main_menu.gd" id="1_t260w"]

[node name="MainMenu" type="Node" node_paths=PackedStringArray("initial_button")]
script = ExtResource("1_t260w")
initial_button = NodePath("Control/Panel/MarginContainer/VBoxContainer/Button_PLAY")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.33839, 0.57, 0.3078, 1)
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.388889
anchor_top = 0.296296
anchor_right = 0.611111
anchor_bottom = 0.691358
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Button_PLAY" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button_EXIT")
text = "PLAY"

[node name="Button_EXIT" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../Button_PLAY")
focus_neighbor_top = NodePath("../Button_PLAY")
focus_neighbor_bottom = NodePath("../Button_DEBUG")
text = "EXIT"

[node name="Button_DEBUG" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../Button_PLAY")
focus_neighbor_top = NodePath("../Button_EXIT")
focus_neighbor_bottom = NodePath("../Button_DEBUG_GENERATION")
text = "DEBUG AREA"

[node name="Button_DEBUG_GENERATION" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Button_PLAY")
focus_neighbor_top = NodePath("../Button_DEBUG")
focus_neighbor_bottom = NodePath("../Button_GENERATION_AREA_TWO")
text = "DEBUG GENERATION"

[node name="Button_GENERATION_AREA_TWO" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Button_PLAY")
focus_neighbor_top = NodePath("../Button_DEBUG_GENERATION")
text = "2D GENERATION TEST"

[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button_PLAY" to="." method="play_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button_EXIT" to="." method="exit_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button_DEBUG" to="." method="debug_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button_DEBUG_GENERATION" to="." method="debug_generation_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/Button_GENERATION_AREA_TWO" to="." method="generation_area_two_pressed"]
